--- a/Beginner.ipynb
+++ b/Beginner.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOBpQ5K60MWsTqaJm8/CwdG",
+      "authorship_tag": "ABX9TyOHEcrS0oX0Mb8ayV+tDDZg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,11 +64,40 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#factorial of a number\n",
+        "n=int(input())\n",
+        "fact = 1\n",
+        "for i in range(2, n+1):\n",
+        "    fact *= i\n",
+        "print(fact)   \n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YJmX4ZSvj6NZ",
+        "outputId": "8af52ce9-de9c-4176-a067-cf5bf1dc7643"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "120\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "YJmX4ZSvj6NZ"
+        "id": "PUBfol-smCJg"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     }
   ]
