--- a/Beginner.ipynb
+++ b/Beginner.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOHEcrS0oX0Mb8ayV+tDDZg",
+      "authorship_tag": "ABX9TyOBhv0O9Al1d+kXvPtHzy+9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -93,11 +93,68 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#Odd or Eve or Zero | Round of decimal to nearest integer\n",
+        "n=round(float(input()))\n",
+        "if n%2!=0:\n",
+        "    print(\"Odd\")\n",
+        "elif n==0:\n",
+        "    print(\"Zero\")\n",
+        "else:\n",
+        "    print(\"Even\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PUBfol-smCJg",
+        "outputId": "31f6df5d-bcd5-4288-d53e-2382206eaa6a"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9.7\n",
+            "Even\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "25\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pfUsYADUrCCY",
+        "outputId": "8e957dbd-d78f-4ae3-a368-9c93c4d5f385"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "25"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "PUBfol-smCJg"
+        "id": "71fDXYeosw_s"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     }
   ]
