--- a/Beginner.ipynb
+++ b/Beginner.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOBhv0O9Al1d+kXvPtHzy+9",
+      "authorship_tag": "ABX9TyPkrhMitvGGZuECkMq8MkoQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,23 +28,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 50,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "NLcXhi55i8Xj",
-        "outputId": "b1749168-3ee0-49af-cc3c-1853689a22c6"
+        "outputId": "10c77075-bc89-4930-892b-a97f27252175"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter first number:5\n",
-            "Enter second number:1\n",
-            "Enter third number:4\n",
-            "5\n"
+            "Enter first number:6\n",
+            "Enter second number:2\n",
+            "Enter third number:9\n",
+            "Greatest number is numc: 9\n"
           ]
         }
       ],
@@ -55,11 +55,11 @@
         "c = int(input(\"Enter third number:\"))\n",
         "\n",
         "if a >= b and a >= c:\n",
-        "    print(a)\n",
+        "    print(\"Greatest number is numa:\",a)\n",
         "elif b >= a and b >= c:\n",
-        "    print(b)\n",
+        "    print(\"Greatest number is numb:\",b)\n",
         "else:\n",
-        "    print(c)\n"
+        "    print(\"Greatest number is numc:\",c)\n"
       ]
     },
     {
@@ -70,23 +70,23 @@
         "fact = 1\n",
         "for i in range(2, n+1):\n",
         "    fact *= i\n",
-        "print(fact)   \n"
+        "print(\"Factorial of\",n,\"is:\",fact)   \n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YJmX4ZSvj6NZ",
-        "outputId": "8af52ce9-de9c-4176-a067-cf5bf1dc7643"
+        "outputId": "7659cd6b-ce03-4266-aea3-a735588e3f14"
       },
-      "execution_count": 21,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "5\n",
-            "120\n"
+            "Factorial of 5 is: 120\n"
           ]
         }
       ]
